[gd_scene load_steps=36 format=3 uid="uid://0c32kepv0ahx"]

[ext_resource type="Script" uid="uid://dc3bukoacyq60" path="res://addons/cogito/Scripts/player_hud_manager.gd" id="1_0wdkf"]
[ext_resource type="PackedScene" uid="uid://dhlrhobg5d4dj" path="res://addons/cogito/Components/UI/UI_PromptComponent.tscn" id="3_06ipe"]
[ext_resource type="PackedScene" uid="uid://8ui13rrsahy8" path="res://addons/cogito/Components/UI/UI_ObjectNameComponent.tscn" id="3_6j0b3"]
[ext_resource type="Texture2D" uid="uid://cqlqo6ga2f71s" path="res://addons/cogito/Assets/Graphics/Crosshair.png" id="3_ahile"]
[ext_resource type="PackedScene" uid="uid://dtdjlu4dtm6wh" path="res://addons/cogito/InventoryPD/UiScenes/InventoryUI.tscn" id="3_krf2d"]
[ext_resource type="Texture2D" uid="uid://b45endup5sujv" path="res://addons/cogito/Assets/Textures/CameraDamageVignette.png" id="3_lb6l4"]
[ext_resource type="Script" uid="uid://y8g8ja6bydr0" path="res://addons/cogito/InventoryPD/UiScenes/inventory_interface.gd" id="3_lyywb"]
[ext_resource type="Theme" uid="uid://by44nnjeu6u4n" path="res://addons/cogito/Theme/Cogito_Theme_A.tres" id="5_j6s1a"]
[ext_resource type="PackedScene" uid="uid://cg41w2fijcp4q" path="res://addons/cogito/InventoryPD/UiScenes/Slot.tscn" id="5_juyvt"]
[ext_resource type="PackedScene" uid="uid://bf2qmquc7ys81" path="res://addons/cogito/InventoryPD/UiScenes/HotBarInventoryUi.tscn" id="6_8odro"]
[ext_resource type="PackedScene" uid="uid://c3ti1cb2o1a11" path="res://addons/cogito/Components/UI/UI_CurrencyComponent.tscn" id="6_kmqyf"]
[ext_resource type="Texture2D" uid="uid://b66g1sdiunpqk" path="res://addons/cogito/Assets/Graphics/Crosshair_Kenney/crosshair001.png" id="7_eu3l5"]
[ext_resource type="Script" uid="uid://bc82t4m5e83s5" path="res://addons/cogito/Components/UI/Ui_StaminaAttribute.gd" id="7_gti6b"]
[ext_resource type="Script" uid="uid://bjvjod3kt0kyr" path="res://addons/cogito/Scripts/ui_wieldable_hud.gd" id="8_2nbvg"]
[ext_resource type="AudioStream" uid="uid://bnqnuewmntcyp" path="res://addons/cogito/Assets/Audio/Kenney/UiAudio/error_008.ogg" id="8_bxpra"]
[ext_resource type="Texture2D" uid="uid://78js4558o61m" path="res://addons/cogito/Assets/Graphics/ItemIcons/Cogito_Pistol.png" id="9_1l2nt"]
[ext_resource type="Texture2D" uid="uid://cxvxq8hy53ih5" path="res://addons/cogito/Assets/Graphics/ItemIcons/Cogito_FoamBullets.png" id="10_bnneb"]
[ext_resource type="PackedScene" uid="uid://btf6bmlgtfk1b" path="res://addons/cogito/Components/DynamicInputIcon.tscn" id="12_jgxar"]
[ext_resource type="Script" uid="uid://by3n6q1edxunf" path="res://addons/cogito/QuestSystem/Components/ui_quest_hud.gd" id="15_kn51k"]
[ext_resource type="PackedScene" uid="uid://dh4yhqd73trwx" path="res://addons/cogito/QuestSystem/Components/QuestEntry.tscn" id="16_qsjbq"]
[ext_resource type="PackedScene" uid="uid://0j3gwj62g2eb" path="res://addons/cogito/Components/UI/UI_HintComponent.tscn" id="17_bidre"]
[ext_resource type="PackedScene" uid="uid://b1lnep4d7uqq3" path="res://addons/cogito/Components/UI/UI_AttributeDisplay.tscn" id="20_3jei3"]
[ext_resource type="PackedScene" uid="uid://d2dt6mcv83j64" path="res://addons/cogito/Components/UI/UI_AttributeComponent.tscn" id="20_lscav"]
[ext_resource type="Script" uid="uid://b7ro3ulh4hp5j" path="res://addons/cogito/InventoryPD/CogitoQuickSlots.gd" id="20_xe82q"]
[ext_resource type="PackedScene" uid="uid://cd3f50eloxr7h" path="res://addons/cogito/InventoryPD/UiScenes/CogitoQuickslotContainer.tscn" id="21_q2hxa"]
[ext_resource type="PackedScene" uid="uid://dygtu0wos4337" path="res://addons/cogito/PackedScenes/death_screen.tscn" id="23_4avie"]
[ext_resource type="Script" uid="uid://c656a651xkd0c" path="res://addons/cogito/EasyMenus/Scripts/tab_menu.gd" id="24_3jei3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8x37p"]
resource_local_to_scene = true
bg_color = Color(1, 1, 1, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1f12m"]
blend_mode = 1

[sub_resource type="LabelSettings" id="LabelSettings_q4xln"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_ossw8"]
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3jei3"]
resource_local_to_scene = true
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eu3l5"]
resource_local_to_scene = true
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmpwe"]
resource_local_to_scene = true
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eka6m"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.101961, 0.101961, 0.101961, 0.784314)

[node name="Player_HUD" type="Control" node_paths=PackedStringArray("fixed_stamina_bar", "ui_currency_area", "attribute_display_node")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0wdkf")
object_name_component = ExtResource("3_6j0b3")
prompt_component = ExtResource("3_06ipe")
hint_component = ExtResource("17_bidre")
ui_attribute_prefab = ExtResource("20_lscav")
ui_currency_prefab = ExtResource("6_kmqyf")
fixed_stamina_bar = NodePath("FixedStaminaBar")
default_crosshair = ExtResource("7_eu3l5")
ui_currency_area = NodePath("InventoryInterface/CogitoTabMenu/Inventory/PlayerCurrencies/MarginContainer/VBoxContainer")
attribute_display_node = NodePath("InventoryInterface/CogitoTabMenu/Stats/QuestDisplay/VBoxContainer/TabContainer/Attributes")
ui_attribute_display_prefab = ExtResource("20_3jei3")

[node name="FixedStaminaBar" parent="." instance=ExtResource("20_lscav")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -175.0
offset_right = 100.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("7_gti6b")
start_fade_at_value_max = true
fade_on_attribute_increase = true
blink_fade_at_value_max = true
time_before_fadeout = 1.5
bar_stylebox = SubResource("StyleBoxFlat_8x37p")

[node name="AttributeLabel" parent="FixedStaminaBar/HBoxContainer" index="2"]
visible = false

[node name="DamageOverlay" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="DamageOverlay"]
material = SubResource("CanvasItemMaterial_1f12m")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_lb6l4")
expand_mode = 5

[node name="Crosshair" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ahile")
expand_mode = 1

[node name="HintTimer" type="Timer" parent="."]
wait_time = 3.5

[node name="PromptArea" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.578125
anchor_top = 0.5
anchor_right = 0.578125
anchor_bottom = 0.5
theme_override_constants/separation = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer_BottomUI" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="WieldableHud" type="PanelContainer" parent="MarginContainer_BottomUI"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("5_j6s1a")
theme_type_variation = &"HUDPanel"
script = ExtResource("8_2nbvg")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer_BottomUI/WieldableHud"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer_BottomUI/WieldableHud/MarginContainer"]
layout_mode = 2

[node name="WieldableData" type="HBoxContainer" parent="MarginContainer_BottomUI/WieldableHud/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="WieldableIcon" type="TextureRect" parent="MarginContainer_BottomUI/WieldableHud/MarginContainer/VBoxContainer/WieldableData"]
layout_mode = 2
texture = ExtResource("9_1l2nt")
expand_mode = 3

[node name="WieldableChargeLabel" type="Label" parent="MarginContainer_BottomUI/WieldableHud/MarginContainer/VBoxContainer/WieldableData"]
layout_mode = 2
theme = ExtResource("5_j6s1a")
theme_type_variation = &"HUDLabel"
text = "00"
label_settings = SubResource("LabelSettings_q4xln")

[node name="HSeparator" type="HSeparator" parent="MarginContainer_BottomUI/WieldableHud/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AmmoData" type="HBoxContainer" parent="MarginContainer_BottomUI/WieldableHud/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="AmmoIcon" type="TextureRect" parent="MarginContainer_BottomUI/WieldableHud/MarginContainer/VBoxContainer/AmmoData"]
layout_mode = 2
texture = ExtResource("10_bnneb")
expand_mode = 3

[node name="AmmoLabel" type="Label" parent="MarginContainer_BottomUI/WieldableHud/MarginContainer/VBoxContainer/AmmoData"]
layout_mode = 2
theme = ExtResource("5_j6s1a")
theme_type_variation = &"HUDLabel"
text = "00"
label_settings = SubResource("LabelSettings_ossw8")

[node name="PlayerAttributes" type="PanelContainer" parent="MarginContainer_BottomUI"]
clip_contents = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2
theme = ExtResource("5_j6s1a")
theme_type_variation = &"HUDPanel"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer_BottomUI/PlayerAttributes"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer_BottomUI/PlayerAttributes/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="InventoryInterface" type="Control" parent="." node_paths=PackedStringArray("inventory_ui", "nodes_to_show")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_lyywb")
inventory_ui = NodePath("CogitoTabMenu/Inventory/InventoryUI")
sound_error = ExtResource("8_bxpra")
is_using_hotbar = false
nodes_to_show = [NodePath("CogitoTabMenu/Inventory/PlayerCurrencies"), NodePath("CogitoTabMenu")]
metadata/_edit_lock_ = true

[node name="CogitoTabMenu" type="TabContainer" parent="InventoryInterface" node_paths=PackedStringArray("nodes_to_focus", "inventory_interface_reference")]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
offset_left = 25.0
offset_top = 150.0
offset_right = 425.0
offset_bottom = 219.0
theme = ExtResource("5_j6s1a")
current_tab = 0
script = ExtResource("24_3jei3")
nodes_to_focus = [NodePath("Inventory/InventoryUI"), NodePath("Quests/QuestDisplay/VBoxContainer/TabContainer/Active"), NodePath("Stats/QuestDisplay/VBoxContainer/TabContainer/Attributes")]
inventory_interface_reference = NodePath("..")
metadata/_custom_type_script = "uid://c656a651xkd0c"

[node name="Inventory" type="VBoxContainer" parent="InventoryInterface/CogitoTabMenu"]
layout_mode = 2
metadata/_tab_index = 0

[node name="InventoryUI" parent="InventoryInterface/CogitoTabMenu/Inventory" instance=ExtResource("3_krf2d")]
layout_mode = 2
inventory_name = "Player Inventory"

[node name="PlayerCurrencies" type="PanelContainer" parent="InventoryInterface/CogitoTabMenu/Inventory"]
clip_contents = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("5_j6s1a")
theme_type_variation = &"HUDPanel"

[node name="MarginContainer" type="MarginContainer" parent="InventoryInterface/CogitoTabMenu/Inventory/PlayerCurrencies"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryInterface/CogitoTabMenu/Inventory/PlayerCurrencies/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Quests" type="Control" parent="InventoryInterface/CogitoTabMenu" node_paths=PackedStringArray("player_hud")]
visible = false
layout_mode = 2
theme = ExtResource("5_j6s1a")
script = ExtResource("15_kn51k")
send_quest_notifications = true
quest_entry = ExtResource("16_qsjbq")
player_hud = NodePath("../../..")
metadata/_edit_use_anchors_ = true
metadata/_tab_index = 1

[node name="QuestDisplay" type="PanelContainer" parent="InventoryInterface/CogitoTabMenu/Quests"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 0
offset_right = 400.0
offset_bottom = 166.0
theme = ExtResource("5_j6s1a")
theme_type_variation = &"HUDPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryInterface/CogitoTabMenu/Quests/QuestDisplay"]
layout_mode = 2

[node name="Label" type="Label" parent="InventoryInterface/CogitoTabMenu/Quests/QuestDisplay/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_j6s1a")
theme_type_variation = &"PromptLabel"
theme_override_font_sizes/font_size = 24
text = "Quests"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TabContainer" type="TabContainer" parent="InventoryInterface/CogitoTabMenu/Quests/QuestDisplay/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_j6s1a")
current_tab = 0

[node name="Active" type="VBoxContainer" parent="InventoryInterface/CogitoTabMenu/Quests/QuestDisplay/VBoxContainer/TabContainer"]
layout_mode = 2
theme = ExtResource("5_j6s1a")
theme_override_constants/separation = 4
metadata/_tab_index = 0

[node name="QuestEntry" parent="InventoryInterface/CogitoTabMenu/Quests/QuestDisplay/VBoxContainer/TabContainer/Active" instance=ExtResource("16_qsjbq")]
layout_mode = 2

[node name="QuestEntry2" parent="InventoryInterface/CogitoTabMenu/Quests/QuestDisplay/VBoxContainer/TabContainer/Active" instance=ExtResource("16_qsjbq")]
layout_mode = 2

[node name="Completed" type="VBoxContainer" parent="InventoryInterface/CogitoTabMenu/Quests/QuestDisplay/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Failed" type="VBoxContainer" parent="InventoryInterface/CogitoTabMenu/Quests/QuestDisplay/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Stats" type="Control" parent="InventoryInterface/CogitoTabMenu"]
visible = false
layout_mode = 2
theme = ExtResource("5_j6s1a")
metadata/_edit_use_anchors_ = true
metadata/_tab_index = 2

[node name="QuestDisplay" type="PanelContainer" parent="InventoryInterface/CogitoTabMenu/Stats"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 0
offset_right = 400.0
offset_bottom = 166.0
theme = ExtResource("5_j6s1a")
theme_type_variation = &"HUDPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryInterface/CogitoTabMenu/Stats/QuestDisplay"]
layout_mode = 2

[node name="Label" type="Label" parent="InventoryInterface/CogitoTabMenu/Stats/QuestDisplay/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_j6s1a")
theme_type_variation = &"PromptLabel"
theme_override_font_sizes/font_size = 24
text = "Stats"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TabContainer" type="TabContainer" parent="InventoryInterface/CogitoTabMenu/Stats/QuestDisplay/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_j6s1a")
current_tab = 0

[node name="Attributes" type="VBoxContainer" parent="InventoryInterface/CogitoTabMenu/Stats/QuestDisplay/VBoxContainer/TabContainer"]
layout_mode = 2
theme = ExtResource("5_j6s1a")
theme_override_constants/separation = 4
metadata/_tab_index = 0

[node name="UiAttributeDisplay" parent="InventoryInterface/CogitoTabMenu/Stats/QuestDisplay/VBoxContainer/TabContainer/Attributes" instance=ExtResource("20_3jei3")]
layout_mode = 2
bar_stylebox = SubResource("StyleBoxFlat_3jei3")

[node name="UiAttributeDisplay2" parent="InventoryInterface/CogitoTabMenu/Stats/QuestDisplay/VBoxContainer/TabContainer/Attributes" instance=ExtResource("20_3jei3")]
layout_mode = 2
bar_stylebox = SubResource("StyleBoxFlat_eu3l5")

[node name="UiAttributeDisplay3" parent="InventoryInterface/CogitoTabMenu/Stats/QuestDisplay/VBoxContainer/TabContainer/Attributes" instance=ExtResource("20_3jei3")]
layout_mode = 2
bar_stylebox = SubResource("StyleBoxFlat_vmpwe")

[node name="ExternalInventoryUI" parent="InventoryInterface" instance=ExtResource("3_krf2d")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 104.0
offset_top = -20.0
offset_right = 144.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GrabbedSlot" parent="InventoryInterface" instance=ExtResource("5_juyvt")]
visible = false
modulate = Color(1, 1, 1, 0.498039)
self_modulate = Color(1, 1, 1, 0.498039)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="HotBarInventory" parent="InventoryInterface" instance=ExtResource("6_8odro")]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -37.0
offset_right = 255.0
offset_bottom = -5.0
grow_vertical = 0
theme = ExtResource("5_j6s1a")
theme_type_variation = &"HUDPanel"

[node name="InfoPanel" type="PanelContainer" parent="InventoryInterface"]
custom_minimum_size = Vector2(200, 10)
layout_mode = 0
offset_right = 200.0
offset_bottom = 110.0
mouse_filter = 2
theme = ExtResource("5_j6s1a")
theme_override_styles/panel = SubResource("StyleBoxFlat_eka6m")

[node name="MarginContainer" type="MarginContainer" parent="InventoryInterface/InfoPanel"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryInterface/InfoPanel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="ItemName" type="Label" parent="InventoryInterface/InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_j6s1a")
theme_type_variation = &"PromptLabel"
text = "ItemName"

[node name="ItemDescription" type="Label" parent="InventoryInterface/InfoPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/line_spacing = 1
theme_override_font_sizes/font_size = 14
text = "Item description going over to lines. Testing overflow as well to make sure the panel container extends as needed."
autowrap_mode = 3

[node name="HBoxUse" type="HBoxContainer" parent="InventoryInterface/InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="InventoryInterface/InfoPanel/MarginContainer/VBoxContainer/HBoxUse"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="BtnUse" parent="InventoryInterface/InfoPanel/MarginContainer/VBoxContainer/HBoxUse/MarginContainer" instance=ExtResource("12_jgxar")]
position = Vector2(15, 15)
scale = Vector2(0.5, 0.5)
action_name = "inventory_use_item"

[node name="TextUse" type="Label" parent="InventoryInterface/InfoPanel/MarginContainer/VBoxContainer/HBoxUse"]
layout_mode = 2
text = "Use"

[node name="HBoxMove" type="HBoxContainer" parent="InventoryInterface/InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="InventoryInterface/InfoPanel/MarginContainer/VBoxContainer/HBoxMove"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="BtnMove" parent="InventoryInterface/InfoPanel/MarginContainer/VBoxContainer/HBoxMove/MarginContainer" instance=ExtResource("12_jgxar")]
position = Vector2(15, 15)
scale = Vector2(0.5, 0.5)
action_name = "inventory_move_item"

[node name="TextMove" type="Label" parent="InventoryInterface/InfoPanel/MarginContainer/VBoxContainer/HBoxMove"]
layout_mode = 2
text = "Move"

[node name="HBoxDrop" type="HBoxContainer" parent="InventoryInterface/InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="InventoryInterface/InfoPanel/MarginContainer/VBoxContainer/HBoxDrop"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="BtnDrop" parent="InventoryInterface/InfoPanel/MarginContainer/VBoxContainer/HBoxDrop/MarginContainer" instance=ExtResource("12_jgxar")]
position = Vector2(15, 15)
scale = Vector2(0.5, 0.5)
action_name = "inventory_drop_item"

[node name="TextDrop" type="Label" parent="InventoryInterface/InfoPanel/MarginContainer/VBoxContainer/HBoxDrop"]
layout_mode = 2
text = "Drop"

[node name="HBoxAssign" type="HBoxContainer" parent="InventoryInterface/InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="InventoryInterface/InfoPanel/MarginContainer/VBoxContainer/HBoxAssign"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="BtnDrop" parent="InventoryInterface/InfoPanel/MarginContainer/VBoxContainer/HBoxAssign/MarginContainer" instance=ExtResource("12_jgxar")]
position = Vector2(15, 15)
scale = Vector2(0.5, 0.5)
action_name = "inventory_assign_item"

[node name="TextAssign" type="Label" parent="InventoryInterface/InfoPanel/MarginContainer/VBoxContainer/HBoxAssign"]
layout_mode = 2
text = "Assign Quickslot"

[node name="QuickSlots" type="Control" parent="InventoryInterface" node_paths=PackedStringArray("quickslot_containers")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -95.0
offset_right = 50.0
offset_bottom = -55.0
grow_vertical = 0
script = ExtResource("20_xe82q")
quickslot_containers = [NodePath("CogitoQuickslotContainer1"), NodePath("CogitoQuickslotContainer2"), NodePath("CogitoQuickslotContainer3"), NodePath("CogitoQuickslotContainer4")]

[node name="CogitoQuickslotContainer1" parent="InventoryInterface/QuickSlots" instance=ExtResource("21_q2hxa")]
layout_mode = 0
offset_top = -16.0
offset_bottom = 48.0
scale = Vector2(0.75, 0.75)
focus_neighbor_top = NodePath("../CogitoQuickslotContainer2")
focus_neighbor_right = NodePath("../CogitoQuickslotContainer3")
focus_neighbor_bottom = NodePath("../CogitoQuickslotContainer4")
focus_mode = 2

[node name="DynamicInputIcon" parent="InventoryInterface/QuickSlots/CogitoQuickslotContainer1/MarginContainerInputIcon" index="0"]
position = Vector2(59, 32)

[node name="CogitoQuickslotContainer2" parent="InventoryInterface/QuickSlots" instance=ExtResource("21_q2hxa")]
layout_mode = 0
offset_left = 50.0
offset_top = -68.0
offset_right = 114.0
offset_bottom = -4.0
scale = Vector2(0.75, 0.75)
focus_neighbor_left = NodePath("../CogitoQuickslotContainer1")
focus_neighbor_right = NodePath("../CogitoQuickslotContainer3")
focus_neighbor_bottom = NodePath("../CogitoQuickslotContainer4")
focus_mode = 2
input_action = "quickslot_2"

[node name="CogitoQuickslotContainer3" parent="InventoryInterface/QuickSlots" instance=ExtResource("21_q2hxa")]
layout_mode = 0
offset_left = 100.0
offset_top = -16.0
offset_right = 164.0
offset_bottom = 48.0
scale = Vector2(0.75, 0.75)
focus_neighbor_left = NodePath("../CogitoQuickslotContainer1")
focus_neighbor_top = NodePath("../CogitoQuickslotContainer2")
focus_neighbor_bottom = NodePath("../CogitoQuickslotContainer4")
focus_mode = 2
input_action = "quickslot_3"

[node name="DynamicInputIcon" parent="InventoryInterface/QuickSlots/CogitoQuickslotContainer3/MarginContainerInputIcon" index="0"]
position = Vector2(0, 32)

[node name="CogitoQuickslotContainer4" parent="InventoryInterface/QuickSlots" instance=ExtResource("21_q2hxa")]
layout_mode = 0
offset_left = 50.0
offset_top = 37.0
offset_right = 114.0
offset_bottom = 101.0
scale = Vector2(0.75, 0.75)
focus_neighbor_left = NodePath("../CogitoQuickslotContainer1")
focus_neighbor_top = NodePath("../CogitoQuickslotContainer2")
focus_neighbor_right = NodePath("../CogitoQuickslotContainer3")
focus_mode = 2
input_action = "quickslot_4"

[node name="DynamicInputIcon" parent="InventoryInterface/QuickSlots/CogitoQuickslotContainer4/MarginContainerInputIcon" index="0"]
position = Vector2(32, 0)

[node name="DeathScreen" parent="." instance=ExtResource("23_4avie")]
visible = false
layout_mode = 1

[node name="HintArea" type="VBoxContainer" parent="."]
layout_mode = 1
offset_bottom = 5.0
theme = ExtResource("5_j6s1a")

[connection signal="timeout" from="HintTimer" to="." method="_on_hint_timer_timeout"]
[connection signal="drop_slot_data" from="InventoryInterface" to="." method="_on_inventory_interface_drop_slot_data"]
[connection signal="gui_input" from="InventoryInterface" to="InventoryInterface" method="_on_gui_input"]
[connection signal="visibility_changed" from="InventoryInterface" to="InventoryInterface" method="_on_visibility_changed"]
[connection signal="hidden" from="InventoryInterface/CogitoTabMenu/Inventory/InventoryUI" to="InventoryInterface" method="_on_inventory_ui_hidden"]
[connection signal="quickslot_pressed" from="InventoryInterface/QuickSlots/CogitoQuickslotContainer1" to="InventoryInterface" method="_on_bind_grabbed_slot_to_quickslot"]
[connection signal="quickslot_pressed" from="InventoryInterface/QuickSlots/CogitoQuickslotContainer2" to="InventoryInterface" method="_on_bind_grabbed_slot_to_quickslot"]
[connection signal="quickslot_pressed" from="InventoryInterface/QuickSlots/CogitoQuickslotContainer3" to="InventoryInterface" method="_on_bind_grabbed_slot_to_quickslot"]
[connection signal="quickslot_pressed" from="InventoryInterface/QuickSlots/CogitoQuickslotContainer4" to="InventoryInterface" method="_on_bind_grabbed_slot_to_quickslot"]

[editable path="FixedStaminaBar"]
[editable path="InventoryInterface/QuickSlots/CogitoQuickslotContainer1"]
[editable path="InventoryInterface/QuickSlots/CogitoQuickslotContainer3"]
[editable path="InventoryInterface/QuickSlots/CogitoQuickslotContainer4"]
